--- a/resources/sass/_reusable.scss
+++ b/resources/sass/_reusable.scss
@@ -56,6 +56,7 @@
     border-top: 1px solid #f1f1f1;
     padding: 8px 8px 18px;
     margin-top: -11px;
+    height: 65px;
     .list-view-image {
       display: none!important;
     }
