--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,7 @@
 @import "fotorama.scss";
 @import "details.scss";
 @import "publicauth.scss";
+@import "dashboard.scss";
 
 .wrapper {
   margin-top: 15px;
@@ -109,9 +110,11 @@
 .hemp-cannabis-toggle {
   display: flex;
   flex-flow: row wrap;
+  margin-top: -1px;
+  position: relative;
   button {
     flex: 0 0 50%;
-    height: 38px;
+    height: 36px;
     background: $main-green-color;
     border: none;
     color: white;
@@ -121,7 +124,6 @@
     letter-spacing: 1px;
     border: 1px solid $main-green-color;
     &:first-of-type {
-      border-right: 1px solid white;
       @include border-radius(2px 0 0 2px);
     }
     cursor: pointer;
