--- a/public/css/app.css
+++ b/public/css/app.css
@@ -675,6 +675,10 @@ a:hover {
   flex: 0 0 20%;
 }
 
+.search-filters__sorting span {
+  cursor: pointer !important;
+}
+
 @media (max-width: 1199px) {
   .search-filters__sorting {
     flex: 0 0 25%;
@@ -2775,6 +2779,10 @@ a:hover {
 .hemp-cannabis-toggle button:focus,
 .hemp-cannabis-toggle button:active {
   outline: none;
+}
+
+.hemp-cannabis-toggle button:disabled {
+  cursor: not-allowed;
 }
 
 .toggle-active {
