--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,7 +1,6 @@
 @import "variables.scss";
 @import "mixins.scss";
 @import "resets.scss";
-// @import "fontello.scss";
 @import "buttons.scss";
 @import "reusable.scss";
 @import "selectric.scss";
@@ -115,9 +114,9 @@
   button {
     flex: 0 0 50%;
     height: 36px;
-    background: $main-green-color;
+    background: white;
     border: none;
-    color: white;
+    color: $main-green-color;
     text-align: center;
     font-size: 10px;
     font-weight: bold;
@@ -137,8 +136,10 @@
 }
 
 .toggle-active {
-  background: white !important;
-  color: $main-green-color !important;
+  background:$main-green-color !important;
+  color: white !important;
+  transform: scale(1.1);
+  border: 1px solid $main-green-color!important;
 }
 
 // fieldset {
@@ -368,6 +369,13 @@
     text-align: left;
     margin-top: 10px;
     margin-bottom: 20px;
+    a {
+      color: $font-color;
+      @include transition-1;
+      &:hover {
+        color: $main-green-color;
+      }
+    }
   }
   ul {
     li {
@@ -861,3 +869,39 @@ footer {
   color: white !important;
   background: $light-green-color;
 }
+
+/* Privacy Policy */
+
+.privacy-policy-content {
+  padding: 18px 0 30px;
+  h3 {
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    text-decoration: underline;
+  }
+
+  h2 {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    margin-top: 15px;
+  }
+
+  p {
+    font-size: 14px;
+    margin-bottom: 10px;
+    text-align: justify;
+  }
+
+  ul {
+    padding-left: 40px;
+    list-style-type: disc;
+    li {
+      font-size: 14px;
+    }
+  }
+}
+
+/* End Privacy Policy */
