fotorama fixed, terms of use added, search page icon changed...

--- a/resources/sass/_fotorama.scss
+++ b/resources/sass/_fotorama.scss
@@ -676,22 +676,22 @@
 
 .fotorama__arr--next {
   &:after {
-    font-family: "Font Awesome 5 Free";
-    content: "\f138";
-    font-weight: 900;
-    margin-right: 7px;
-    font-size: 25px;
-    color: white;
+    // font-family: "Font Awesome 5 Free";
+    // content: "\f138";
+    // font-weight: 900;
+    // margin-right: 7px;
+    // font-size: 25px;
+    // color: white;
   }
 }
 
 .fotorama__arr--prev {
   &:after {
-    font-family: "Font Awesome 5 Free";
-    content: "\f137";
-    font-weight: 900;
-    margin-left: 12px;
-    font-size: 25px;
-    color: white;
+    // font-family: "Font Awesome 5 Free";
+    // content: "\f137";
+    // font-weight: 900;
+    // margin-left: 12px;
+    // font-size: 25px;
+    // color: white;
   }
 }
