--- a/public/css/app.css
+++ b/public/css/app.css
@@ -405,7 +405,7 @@ a:hover {
   background: #f8f8f8;
   position: relative;
   overflow: hidden;
-  margin-top: 20px;
+  margin-top: 35px;
   background: #1c6d5a;
   color: #ffffff;
   border-radius: 3px;
@@ -1904,24 +1904,6 @@ a:hover {
   display: none;
 }
 
-.fotorama__arr--next:after {
-  font-family: "Font Awesome 5 Free";
-  content: "\F138";
-  font-weight: 900;
-  margin-right: 7px;
-  font-size: 25px;
-  color: white;
-}
-
-.fotorama__arr--prev:after {
-  font-family: "Font Awesome 5 Free";
-  content: "\F137";
-  font-weight: 900;
-  margin-left: 12px;
-  font-size: 25px;
-  color: white;
-}
-
 .home-search-wrap {
   position: relative;
 }
@@ -2629,6 +2611,11 @@ a:hover {
   font-weight: bold !important;
 }
 
+.fotorama img {
+  -o-object-fit: cover !important;
+     object-fit: cover !important;
+}
+
 .wrapper {
   margin-top: 15px;
   margin-bottom: 15px;
@@ -2764,7 +2751,8 @@ a:hover {
   font-size: 10px;
   font-weight: bold;
   letter-spacing: 1px;
-  border: 1px solid #1c6d5a;
+  border: 1px solid lightgray;
+  opacity: 0.5;
   cursor: pointer;
 }
 
@@ -2784,8 +2772,8 @@ a:hover {
 .toggle-active {
   background: #1c6d5a !important;
   color: white !important;
-  transform: scale(1.1);
-  border: 1px solid #1c6d5a !important;
+  opacity: 1 !important;
+  border: none !important;
 }
 
 .listing-account {
@@ -3502,38 +3490,45 @@ footer div:last-of-type ul li a:after {
 
 /* Privacy Policy */
 
-.privacy-policy-content {
+.privacy-policy-content,
+.terms-of-use-content {
   padding: 18px 0 30px;
 }
 
-.privacy-policy-content h3 {
-  font-size: 15px;
+.privacy-policy-content h3,
+.terms-of-use-content h3 {
+  font-size: 14px;
   font-weight: bold;
   margin-bottom: 15px;
   margin-top: 15px;
   text-decoration: underline;
 }
 
-.privacy-policy-content h2 {
-  font-size: 16px;
+.privacy-policy-content h2,
+.terms-of-use-content h2 {
+  font-size: 15px;
   font-weight: bold;
   margin-bottom: 15px;
   margin-top: 15px;
 }
 
-.privacy-policy-content p {
-  font-size: 14px;
+.privacy-policy-content p,
+.terms-of-use-content p {
+  font-size: 13px;
   margin-bottom: 10px;
   text-align: justify;
 }
 
-.privacy-policy-content ul {
+.privacy-policy-content ul,
+.terms-of-use-content ul {
   padding-left: 40px;
   list-style-type: disc;
+  margin-bottom: 15px;
 }
 
-.privacy-policy-content ul li {
-  font-size: 14px;
+.privacy-policy-content ul li,
+.terms-of-use-content ul li {
+  font-size: 13px;
 }
 
 /* End Privacy Policy */
