--- a/resources/sass/_details.scss
+++ b/resources/sass/_details.scss
@@ -238,9 +238,10 @@
         img {
           display: inline-block;
           position: relative;
-          top: 6px;
+          top: 8px;
           width: 25px;
-          height: 25px;
+          height: 30px;
+          margin-right: 7px;
         }
       }
 
@@ -253,7 +254,7 @@
 
       &__information {
         p {
-          line-height: 1.1em;
+          line-height: 1.2em;
           text-align: justify;
           margin-top: 15px;
           margin-bottom: 15px;
@@ -294,8 +295,9 @@
           display: inline-block;
           position: relative;
           width: 20px;
-          height: 20px;
-          top: 4px;
+          height: 27px;
+          top: 6px;
+          margin-right: 5px;
         }
       }
 
@@ -368,5 +370,13 @@
       text-align: center;
       font-style: italic;
     }
+  }
+}
+
+.product-description-wrap-info {
+ margin-top: 30px;
+  li {
+    display: inline-block;
+    margin-right: 20px;
   }
 }
