--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2627,6 +2627,26 @@ a:hover {
      object-fit: cover !important;
 }
 
+.welcome-user {
+  float: right;
+  margin-right: 20px;
+  position: relative;
+  top: 7px;
+  font-style: italic;
+}
+
+.welcome-user p {
+  font-size: 14px !important;
+}
+
+.welcome-user p a {
+  color: #393536;
+}
+
+.welcome-user p a:hover {
+  color: #1c6d5a;
+}
+
 .wrapper {
   margin-top: 15px;
   margin-bottom: 15px;
@@ -2640,6 +2660,7 @@ a:hover {
 
 .outer-wrap {
   border: 10px solid #e4e4e4;
+  outline: 2px solid #cdcdcd;
 }
 
 @media (min-width: 991px) {
@@ -2651,8 +2672,8 @@ a:hover {
 .home-wrap {
   display: flex;
   flex-flow: row wrap;
-  border: 2px solid #cdcdcd;
-  padding: 20px;
+  padding: 15px;
+  padding-right: 0;
 }
 
 @media (max-width: 991px) {
@@ -2763,7 +2784,7 @@ a:hover {
   font-weight: bold;
   letter-spacing: 1px;
   border: 1px solid lightgray;
-  opacity: 0.5;
+  opacity: 0.3;
   cursor: pointer;
 }
 
@@ -2785,6 +2806,8 @@ a:hover {
   color: white !important;
   opacity: 1 !important;
   border: none !important;
+  transform: scale(1.08);
+  z-index: 99;
 }
 
 .listing-account {
