--- a/resources/sass/_details.scss
+++ b/resources/sass/_details.scss
@@ -278,7 +278,7 @@
     }
     .user-verification-info {
       padding: 15px 10px;
-      margin-top: 62px;
+      margin-top: 66px;
       border: 1px solid $main-green-color;
       @include border-radius(1px);
 
@@ -298,6 +298,13 @@
           height: 27px;
           top: 6px;
           margin-right: 5px;
+          @media(max-width: 1300px) {
+            top: 12px;
+          }
+
+          @media(max-width:767px) {
+            top: 6px;
+          }
         }
       }
 
